# ai-harness

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODING_STANDARDS.md  CONTEXT.md  README.md  install.sh  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  tasks.py  uninstall.sh
.ai-harness/: config.yml
.opencode/: architecture-review-1781730328.html
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  opencode.json  prompt.md  review-prompt.md
cli/: README.md  pyproject.toml
cli/cmd/ai-harness/: main.go  run.go  run_test.go
cli/internal/commands/: commands.go  commands_test.go
cli/internal/install/: install.go  install_test.go
cli/internal/opencode/: opencode.go
cli/src/cli/: main.py
e2e/: Dockerfile  __init__.py  docker-test.sh  e2e_test.sh  harness.py  install_lifecycle.py  lib.sh  set_models_lifecycle.py  tasks.py  test_copilot_cli_lifecycle.py  test_harness_lifecycle.py  test_sdd_lifecycle.py  test_tool_lifecycle.py  test_wizard_lifecycle.py  uninstall_lifecycle.py
expected/: change-archiver.md  change-design.md  change-explorer.md  change-implementor.md  change-orchestrator.md  change-propose.md  change-specs.md  change-tasks.md  change-validator.md  opencode.json
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
openspec/: CHANGELOG.md  config.yaml  skill-registry.md
test-harness/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
tests/: _change_flow_fixtures.py  _receipts_fixtures.py  _review_transaction_checkpoints_fixtures.py  _review_transaction_storage_fixtures.py  conftest.py  test_agent_catalog.py  test_catalog.py  test_change.py  test_change_approvals.py  test_change_config.py  test_change_continuation.py  test_change_flow_internals.py  test_change_slice_status.py  test_change_sliced_archive.py  test_change_task_slice.py  test_checkpoint_bundle_store.py  test_claude_installer.py  test_cli_sdd.py  (+64 more)
tests-prompts/: Dockerfile  _dump_parse_trace.py  _e2e_assertions.py  _e2e_runner.py  _extractor.py  cases.csv  cases_e2e.csv  docker-test.sh  parse_csv.py  run.sh
(+847 files in other folders)
