[project]
name = "ai-harness"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Diego", email = "diegogomez211990@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.7",
]

[project.scripts]
ai-harness = "ai_harness.main:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage[toml]>=7",
    "invoke>=2.0",
    "pytest>=9.1.0",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pylint>=4.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["ai_harness"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"e2e/**" = ["ALL"]
"tests/**" = ["B011", "F821"]

[tool.ruff.format]
docstring-code-format = true
