[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diego", email = "diegogomez211990@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
ai-harness = "cli.main:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
